[gd_scene load_steps=4 format=3 uid="uid://cmwinr14waueh"]

[ext_resource type="Script" path="res://Scripts/UI/player_screen.gd" id="1_m4v23"]
[ext_resource type="Texture2D" uid="uid://dskeyflqy4ob3" path="res://icon.svg" id="2_hhlgu"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_laibm"]

[node name="PlayerScreen" type="Node2D"]
script = ExtResource("1_m4v23")

[node name="PlayerScreenWindow" type="TextureRect" parent="."]
offset_left = 3.0
offset_top = 3.0
offset_right = 423.0
offset_bottom = 581.0
texture = SubResource("PlaceholderTexture2D_laibm")

[node name="PlayerSprite2D" type="Sprite2D" parent="PlayerScreenWindow"]
position = Vector2(213, 281)
texture = ExtResource("2_hhlgu")

[node name="ClosePlayerScreenButton" type="Button" parent="PlayerScreenWindow"]
layout_mode = 0
offset_left = 386.0
offset_top = 10.0
offset_right = 412.0
offset_bottom = 41.0
text = "X"

[connection signal="gui_input" from="PlayerScreenWindow" to="." method="_on_player_screen_window_gui_input"]
[connection signal="mouse_entered" from="PlayerScreenWindow" to="." method="_on_player_screen_window_mouse_entered"]
[connection signal="mouse_exited" from="PlayerScreenWindow" to="." method="_on_player_screen_window_mouse_exited"]
[connection signal="pressed" from="PlayerScreenWindow/ClosePlayerScreenButton" to="." method="_on_close_player_screen_button_pressed"]
